--- a/13_exceptions_part2_peripheral_IRQs/Cargo.toml
+++ b/13_exceptions_part2_peripheral_IRQs/Cargo.toml
@@ -24,6 +24,8 @@ test-types = { path = "test-types" }
 tock-registers = { version = "0.7.x", default-features = false, features = ["register_types"], optional = true }
 qemu-exit = { version = "3.x.x", optional = true }
 
+ruspiro-interrupt = { version = "0.5", features = ["pi3"] }
+
 # Platform specific dependencies
 [target.'cfg(target_arch = "aarch64")'.dependencies]
 cortex-a = { version = "7.x.x" }
